Added tests to demonstrate usage analysis Added PropertyDataAttribute Theory test
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4040

--- a/resharper/tests.reference.nunit/tests.reference.nunit.csproj
+++ b/resharper/tests.reference.nunit/tests.reference.nunit.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Compile Include="DemonstratingUsageAnalysis.cs" />
     <Compile Include="ExternalAnnotations\JetBrains.Annotations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
