--- a/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.5/tests.xunit.1.5.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.5/tests.xunit.1.5.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="CapturesOutput.cs" />
     <Compile Include="CustomFactAttribute.cs" />
+    <Compile Include="DemonstrateUsageAnalysis.cs" />
     <Compile Include="ExternalAnnotations\JetBrains.Annotations.cs" />
     <Compile Include="ExternalAnnotations\VerifyExternalAnnotations.cs" />
     <Compile Include="FailingTests.cs" />
