Refactored provider assembly to be a bit more sensibly organised, and to use JetBrain's LINQ implementation (so I can still use C#3, but target .net 2 - yay!) Migrated refactoring across all 3 versions - 4.1, 4.5 and 5.0. Sheesh.
--HG--
extra : convert_revision : svn%3Afeebac22-3a02-2946-87e6-b637fb197462%4044

--- a/resharper/tests.xunitcontrib.runner.resharper.runner.5.0/tests.xunitcontrib.runner.resharper.runner.5.0.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.runner.5.0/tests.xunitcontrib.runner.resharper.runner.5.0.csproj
@@ -37,10 +37,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.ReSharper.Psi, Version=5.0.1550.11, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.ReSharper.Psi.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework, Version=5.0.1511.105, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v5.0\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Moq, Version=3.1.416.3, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
