--- a/resharper/tests.xunitcontrib.runner.resharper.runner.5.0/tests.xunitcontrib.runner.resharper.runner.5.0.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.runner.5.0/tests.xunitcontrib.runner.resharper.runner.5.0.csproj
@@ -14,10 +14,14 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkSubset>
     </TargetFrameworkSubset>
-    <SccProjectName>Svn</SccProjectName>
-    <SccLocalPath>Svn</SccLocalPath>
-    <SccAuxPath>Svn</SccAuxPath>
-    <SccProvider>SubversionScc</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -79,7 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xunitcontrib.runner.resharper.runner.5.0\xunitcontrib.runner.resharper.runner.5.0.csproj">
-      <Project>{693DF752-35EF-4CAD-948E-025CD1EB40DF}</Project>
+      <Project>{22FF2943-666D-4B71-80EF-65521B7429FD}</Project>
       <Name>xunitcontrib.runner.resharper.runner.5.0</Name>
     </ProjectReference>
   </ItemGroup>
