Minor updates to 5.0 versions to bring into line with RTM versions of built in test providers Updated 5.0 AssemblyInfo to share the common assembly info again. Probably means I'll need to update to 0.3.3 (it was 0.3.2.<rs_build_number> but that doesn't make sense for the 4.1 and 4.5 versions) Updated 4.5 to closely match 5.0 implementation. Specifically, 4.5 now also fixes issue #3677 (classes inheriting from themselves causes hang) Issue #2101 (Fact methods on private classes should not be tests) is fixed for 4.5 and 5.0. Not sure if I fixes it here or in a previous commit Removed some unused 4.1 files

--- a/resharper/xunitcontrib.runner.resharper.provider.4.5/xunitcontrib.runner.resharper.provider.4.5.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider.4.5/xunitcontrib.runner.resharper.provider.4.5.csproj
@@ -41,6 +41,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=4.5.1274.1, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\3rdParty\ReSharper_v4.5\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.DocumentManager, Version=4.5.1231.7, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v4.5\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
@@ -136,6 +140,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="UnitTestElementIdentifier.cs" />
     <Compile Include="Wrappers\AttributeWrapper.cs" />
     <Compile Include="Wrappers\MethodWrapper.cs" />
     <Compile Include="Wrappers\TypeExtensions.cs" />
@@ -157,7 +162,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="Resources\xunit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
