--- a/resharper/xunitcontrib.runner.resharper.provider.4.1/xunitcontrib.runner.resharper.provider.4.1.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider.4.1/xunitcontrib.runner.resharper.provider.4.1.csproj
@@ -139,6 +139,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="UnitTestElementIdentifier.cs" />
     <Compile Include="Wrappers\AttributeWrapper.cs" />
     <Compile Include="Wrappers\MethodWrapper.cs" />
     <Compile Include="Wrappers\TypeExtensions.cs" />
@@ -163,7 +164,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="Resources\xunit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
