--- a/resharper/xunitcontrib.runner.resharper.runner.5.0/xunitcontrib.runner.resharper.runner.5.0.csproj
+++ b/resharper/xunitcontrib.runner.resharper.runner.5.0/xunitcontrib.runner.resharper.runner.5.0.csproj
@@ -60,6 +60,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="AttributeNames.cs" />
     <Compile Include="ExceptionConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
