Added ReSharper 5.1 projects. Their version number is 0.4.1.build where build is the build number of ReSharper 5.1 they're built against.

--- a/.hgignore
+++ b/.hgignore
@@ -1,7 +1,5 @@
 glob:_ReSharper.*
-glob:3rdParty/ReSharper_v4.1
-glob:3rdParty/ReSharper_v4.5
-glob:3rdParty/ReSharper_v5.0
+glob:3rdParty/ReSharper_v*
 glob:**/bin
 glob:**/obj
 glob:*.suo
