--- a/resharper/xunitcontrib.runner.resharper.provider.5.1/xunitcontrib.runner.resharper.provider.5.1.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider.5.1/xunitcontrib.runner.resharper.provider.5.1.csproj
@@ -45,48 +45,63 @@
   <ItemGroup>
     <Reference Include="JetBrains.Annotations">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Annotations.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.DocumentManager">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.IDE">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.IDE.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Metadata">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.Metadata.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.ProjectModel">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Shell">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.Shell.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.UI">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.UI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Util">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.Util.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Daemon">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Daemon.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Feature.Services">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Feature.Services.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Features.Common">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Features.Common.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Psi">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Psi.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.UnitTestExplorer">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.UnitTestExplorer.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.UnitTestFramework">
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.UnitTestFramework.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
