--- a/resharper/xunitcontrib.runner.resharper.runner.5.1/xunitcontrib.runner.resharper.runner.5.1.csproj
+++ b/resharper/xunitcontrib.runner.resharper.runner.5.1/xunitcontrib.runner.resharper.runner.5.1.csproj
@@ -46,10 +46,12 @@
     <Reference Include="JetBrains.ReSharper.Psi, Version=5.1.1709.5, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Psi.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework, Version=5.1.1709.5, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
