--- a/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.6/tests.xunit.1.6.vs2010.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.manual/tests.xunit.1.6/tests.xunit.1.6.vs2010.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{963EF988-D046-48FA-A4D3-0B5520C3E7B8}</ProjectGuid>
+    <ProjectGuid>{186426F2-D00C-4F7C-84CD-7CEE229B29EC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>tests.multiple.assemblies</RootNamespace>
-    <AssemblyName>tests.multiple.assemblies</AssemblyName>
+    <RootNamespace>tests.xunit</RootNamespace>
+    <AssemblyName>tests.xunit.1.6</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -37,15 +37,15 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\vs2010\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <OutputPath>bin\vs2010\anycpu\Debug\</OutputPath>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\vs2010\Release\</OutputPath>
+    <OutputPath>bin\vs2010\anycpu\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -64,18 +64,42 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit, Version=1.1.0.1323, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\3rdParty\xUnit.net-1.1\xunit.dll</HintPath>
+    <Reference Include="xunit">
+      <HintPath>..\..\..\3rdParty\xUnit.net-1.6\xunit.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.extensions, Version=1.1.0.1323, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\3rdParty\xUnit.net-1.1\xunit.extensions.dll</HintPath>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\..\..\3rdParty\xUnit.net-1.6\xunit.extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FromAnotherAssemblyTests.cs" />
+    <Compile Include="CapturesOutput.cs" />
+    <Compile Include="CustomFactAttribute.cs" />
+    <Compile Include="DemonstrateUsageAnalysis.cs" />
+    <Compile Include="ExternalAnnotations\JetBrains.Annotations.cs" />
+    <Compile Include="ExternalAnnotations\VerifyExternalAnnotations.cs" />
+    <Compile Include="FailingTests.cs" />
+    <Compile Include="InvalidClassVisibility.cs" />
+    <Compile Include="MixedMethodVisibility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DemonstrateRandomRunningOrder.cs" />
+    <Compile Include="ReadsFromConfigFile.cs" />
+    <Compile Include="SetsCurrentDirectoryCorrectly.cs" />
+    <Compile Include="SkippedTests.cs" />
+    <Compile Include="TestClassLifecycle.cs" />
+    <Compile Include="TestsInDerivedClasses.cs" />
+    <Compile Include="TestsInNestedClasses.cs" />
+    <Compile Include="TestsWithDisplayNames.cs" />
+    <Compile Include="TestsWithFixtures.cs" />
+    <Compile Include="TestsWithTraits.cs" />
+    <Compile Include="TheoryTests.cs" />
+    <Compile Include="TimedOutTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="xunit.console.bat" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="xunit.console.output.html" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
