Initial cut of support for the Silverlight unit testing framework (as distributed with the April 2010 Silveright Toolkit). It's mostly working, but very much a work in progress...

--- a/.hgignore
+++ b/.hgignore
@@ -1,7 +1,9 @@
 glob:_ReSharper.*
+glob:**/_ReSharper.*
 glob:3rdParty/ReSharper_v*
-glob:**/bin
+glob:**/[bB]in
 glob:**/obj
 glob:*.suo
 glob:*.user
 glob:*.cache
+glob:silverlight/external
