--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,8 @@
 glob:_ReSharper.*
 glob:**/_ReSharper.*
 glob:3rdParty/ReSharper_v*
+glob:3rdParty/ReSharper*
+glob:**/bin
 glob:**/[bB]in
 glob:**/obj
 glob:*.suo
