--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>XunitContrib.Runner.ReSharper.UnitTestProvider</RootNamespace>
     <AssemblyName>xunitcontrib.runner.resharper.provider.5.1</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
     </SccProjectName>
@@ -24,6 +24,7 @@
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,63 +45,63 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JetBrains.Annotations">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Annotations.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Annotations.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.DocumentManager">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.IDE">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.IDE.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.IDE.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Metadata">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.Metadata.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.Metadata.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.ProjectModel">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Shell">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.Shell.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.Shell.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.UI">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.UI.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Util">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.Platform.ReSharper.Util.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.Util.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Daemon">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Daemon.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.Daemon.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Feature.Services">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Feature.Services.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.Feature.Services.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Features.Common">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Features.Common.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.Features.Common.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Psi">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.Psi.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.Psi.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.UnitTestExplorer">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.UnitTestExplorer.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.UnitTestExplorer.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.UnitTestFramework">
-      <HintPath>..\..\3rdParty\ReSharper_v5.1\JetBrains.ReSharper.UnitTestFramework.dll</HintPath>
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.UnitTestFramework.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -146,7 +147,7 @@
     <None Include="Resources\xunit.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\xunitcontrib.runner.resharper.runner.5.1\xunitcontrib.runner.resharper.runner.csproj">
+    <ProjectReference Include="..\xunitcontrib.runner.resharper.runner\xunitcontrib.runner.resharper.runner.csproj">
       <Project>{CFB96B45-E0FC-402F-97BE-0D9754CE7E3B}</Project>
       <Name>xunitcontrib.runner.resharper.runner</Name>
     </ProjectReference>
