added references to ComponentModel and DocumentModel
--HG--
branch : R#6
rename : resharper/xunitcontrib.runner.resharper.provider.5.1/xunitcontrib.runner.resharper.provider.5.1.csproj => resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
extra : rebase_source : 0fcbb9800bc1e92709a43ceedebc522e249c9950

--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -48,9 +48,15 @@
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.Annotations.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="JetBrains.Platform.ReSharper.ComponentModel">
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.ComponentModel.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.DocumentManager">
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="JetBrains.Platform.ReSharper.DocumentModel">
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.DocumentModel.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.IDE">
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.Platform.ReSharper.IDE.dll</HintPath>
