--- a/resharper/xunitcontrib.runner.resharper.runner/xunitcontrib.runner.resharper.runner.csproj
+++ b/resharper/xunitcontrib.runner.resharper.runner/xunitcontrib.runner.resharper.runner.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations">
+      <HintPath>..\..\3rdParty\ReSharper\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.ReSharper.Psi, Version=5.1.1709.5, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.Psi.dll</HintPath>
