--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -129,6 +129,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Presentation\XUnitRunnerTestClassElement.cs" />
     <Compile Include="Presentation\XUnitTestElementBase.cs" />
     <Compile Include="UnitTestElementIdentifier.cs" />
     <Compile Include="IMetadataTypeProcessor.cs" />
