--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -135,7 +135,7 @@
     <Compile Include="IMetadataTypeProcessor.cs" />
     <Compile Include="MetadataAssemblyExtensions.cs" />
     <Compile Include="Presentation\XunitBrowserPresenter.cs" />
-    <Compile Include="Presentation\XunitTestElementClass.cs" />
+    <Compile Include="Presentation\XUnitTestClassElement.cs" />
     <Compile Include="Presentation\XunitTestElementMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
