--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -137,7 +137,7 @@
     <Compile Include="MetadataAssemblyExtensions.cs" />
     <Compile Include="Presentation\XunitBrowserPresenter.cs" />
     <Compile Include="Presentation\XUnitTestClassElement.cs" />
-    <Compile Include="Presentation\XunitTestElementMethod.cs" />
+    <Compile Include="Presentation\XUnitTestMethodElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
