CommonAssemblyInfo.cs enabled
--HG--
branch : R#6

--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -129,6 +129,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Presentation\XUnitRunnerTestClassElement.cs" />
     <Compile Include="Presentation\XUnitRunnerTestMethodElement.cs" />
     <Compile Include="Presentation\XUnitTestElementBase.cs" />
