--- a/resharper/tests.xunitcontrib.runner.resharper.runner/tests.xunitcontrib.runner.resharper.runner.csproj
+++ b/resharper/tests.xunitcontrib.runner.resharper.runner/tests.xunitcontrib.runner.resharper.runner.csproj
@@ -72,6 +72,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ExceptionConverterTests.cs" />
     <Compile Include="FakeRemoteTaskServer.cs" />
     <Compile Include="NewReSharperRunnerLoggerTests.cs" />
