--- a/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
+++ b/resharper/xunitcontrib.runner.resharper.provider/xunitcontrib.runner.resharper.provider.csproj
@@ -154,6 +154,7 @@
     </Compile>
     <Compile Include="SuppressUnusedXunitTestElements.cs" />
     <Compile Include="XunitFileExplorer.cs" />
+    <Compile Include="XunitTestPresenter.cs" />
     <Compile Include="XunitTestProvider.cs" />
     <Compile Include="XunitTestRunnerProvider.cs" />
   </ItemGroup>
