--- a/src/tests.xunitcontrib.runner.resharper.runner/XUnitTestRunner.Tests.csproj
+++ b/src/tests.xunitcontrib.runner.resharper.runner/XUnitTestRunner.Tests.csproj
@@ -47,9 +47,11 @@
   <ItemGroup>
     <Reference Include="JetBrains.ReSharper.Psi">
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.Psi.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.TaskRunnerFramework">
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Moq, Version=3.1.416.3, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
