--- a/src/xunitcontrib.runner.resharper.runner/XUnitTestRunner.csproj
+++ b/src/xunitcontrib.runner.resharper.runner/XUnitTestRunner.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Reference Include="JetBrains.Annotations">
       <HintPath>..\..\3rdParty\ReSharper\JetBrains.Annotations.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Psi, Version=5.1.1709.5, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
