--- a/src/XUnitTestProvider/XUnitTestProvider.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ReSharper.XUnitTestProvider</RootNamespace>
-    <AssemblyName>ReSharper.XUnitTestProvider.6.0</AssemblyName>
+    <AssemblyName>ReSharper.XUnitTestProvider.6.1</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
@@ -173,7 +173,7 @@
     <None Include="Resources\xunit.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\xunitcontrib.runner.resharper.runner\XUnitTestRunner.csproj">
+    <ProjectReference Include="..\XUnitTestRunner\XUnitTestRunner.csproj">
       <Project>{CFB96B45-E0FC-402F-97BE-0D9754CE7E3B}</Project>
       <Name>XUnitTestRunner</Name>
     </ProjectReference>
