--- a/src/XUnitTestRunner.TestsManual/tests.xunit.1.6.1/tests.xunit.1.6.1.vs2010.csproj
+++ b/src/XUnitTestRunner.TestsManual/tests.xunit.1.6.1/tests.xunit.1.6.1.vs2010.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{c8f03197-cbcb-472e-a3f5-6cc7cfd26b40}</ProjectGuid>
+    <ProjectGuid>{C8F03197-CBCB-472E-A3F5-6CC7CFD26B40}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>tests.xunit</RootNamespace>
@@ -73,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CapturesOutput.cs" />
+    <Compile Include="PartialClass.File1.cs" />
+    <Compile Include="PartialClass.File2.cs" />
     <Compile Include="CustomFactAttribute.cs" />
     <Compile Include="DemonstrateUsageAnalysis.cs" />
     <Compile Include="ExternalAnnotations\JetBrains.Annotations.cs" />
