--- a/src/XUnitTestRunner.TestsManual/tests.xunit.1.6.1/tests.xunit.1.6.1.x86.vs2010.csproj
+++ b/src/XUnitTestRunner.TestsManual/tests.xunit.1.6.1/tests.xunit.1.6.1.x86.vs2010.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{ab444cef-d037-4f28-814f-b8c40dbec0e4}</ProjectGuid>
+    <ProjectGuid>{AB444CEF-D037-4F28-814F-B8C40DBEC0E4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>tests.xunit</RootNamespace>
@@ -82,6 +82,8 @@
     <Compile Include="FailingTests.cs" />
     <Compile Include="InvalidClassVisibility.cs" />
     <Compile Include="MixedMethodVisibility.cs" />
+    <Compile Include="PartialClass.File1.cs" />
+    <Compile Include="PartialClass.File2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DemonstrateRandomRunningOrder.cs" />
     <Compile Include="ReadsFromConfigFile.cs" />
