--- a/src/XUnitTestProvider/XUnitTestProvider.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.csproj
@@ -24,7 +24,8 @@
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -138,6 +139,9 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="TypeUtility.cs" />
+    <Compile Include="XunitTestFakeElement.cs" />
+    <Compile Include="XunitFileExplorerInheritorsConsumer.cs" />
     <Compile Include="XUnitTestFileExplorer.cs" />
     <Compile Include="UnitTestElementIdentifier.cs" />
     <Compile Include="AttributeWrapper.cs" />
@@ -147,7 +151,6 @@
     <Compile Include="XunitTestElementBase.cs" />
     <Compile Include="XUnitMetadataExplorer.cs" />
     <Compile Include="XUnitTestMetadataExplorer.cs" />
-    <Compile Include="XunitBrowserPresenter.cs" />
     <Compile Include="XunitTestClassElement.cs" />
     <Compile Include="XunitTestMethodElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -158,7 +161,6 @@
     </Compile>
     <Compile Include="SuppressUnusedXunitTestElements.cs" />
     <Compile Include="XunitFileExplorer.cs" />
-    <Compile Include="XunitTestPresenter.cs" />
     <Compile Include="XunitTestProvider.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -171,7 +173,7 @@
     <None Include="Resources\xunit.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\xunitcontrib.runner.resharper.runner\XUnitTestRunner.csproj">
+    <ProjectReference Include="..\XUnitTestRunner\XUnitTestRunner.csproj">
       <Project>{CFB96B45-E0FC-402F-97BE-0D9754CE7E3B}</Project>
       <Name>XUnitTestRunner</Name>
     </ProjectReference>
