--- a/src/tests.reference.nunit/tests.reference.nunit.vs2010.csproj
+++ b/src/tests.reference.nunit/tests.reference.nunit.vs2010.csproj
@@ -51,9 +51,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\3rdParty\nunit-2.4.8\nunit.framework.dll</HintPath>
+      <HintPath>..\..\3rdParty\nunit-2.5.10\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -72,6 +72,8 @@
   <ItemGroup>
     <Compile Include="CapturesOutput.cs" />
     <Compile Include="FailingTests.cs" />
+    <Compile Include="PartialClass.File1.cs" />
+    <Compile Include="PartialClass.File2.cs" />
     <Compile Include="ReadsFromConfigFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkippedTests.cs" />
