Refactored UnitTestElementMetadataIdentifier and UnitTestElementPsiIdentifier

--- a/src/XUnitTestRunner.TestsManual/tests.xunit.1.6/tests.xunit.1.6.vs2010.csproj
+++ b/src/XUnitTestRunner.TestsManual/tests.xunit.1.6/tests.xunit.1.6.vs2010.csproj
@@ -90,6 +90,7 @@
     <Compile Include="TestsInNestedClasses.cs" />
     <Compile Include="TestsWithDisplayNames.cs" />
     <Compile Include="TestsWithFixtures.cs" />
+    <Compile Include="TestsWithRunWith.cs" />
     <Compile Include="TestsWithTraits.cs" />
     <Compile Include="TheoryTests.cs" />
     <Compile Include="TimedOutTests.cs" />
