--- a/src/XUnitTestProvider/XUnitTestProvider.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.csproj
@@ -48,12 +48,10 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit, Version=1.8.0.1549, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="xunit">
       <HintPath>..\..\packages\xunit.1.8.0.1549\lib\xunit.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.extensions, Version=1.8.0.1549, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="xunit.extensions">
       <HintPath>..\..\packages\xunit.extensions.1.8.0.1549\lib\xunit.extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -61,7 +59,11 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AttributeWrapper.cs" />
+    <Compile Include="MethodWrapper.cs" />
+    <Compile Include="TypeExtensions.cs" />
     <Compile Include="TypeUtility.cs" />
+    <Compile Include="TypeWrapper.cs" />
     <Compile Include="UnitTestElementMetadataIdentifier.cs" />
     <Compile Include="XunitTestFakeElement.cs" />
     <Compile Include="XunitFileExplorerInheritorsConsumer.cs" />
@@ -69,10 +71,6 @@
     <Compile Include="XunitTestElementSerializer.cs" />
     <Compile Include="XUnitTestFileExplorer.cs" />
     <Compile Include="UnitTestElementPsiIdentifier.cs" />
-    <Compile Include="AttributeWrapper.cs" />
-    <Compile Include="MethodWrapper.cs" />
-    <Compile Include="TypeExtensions.cs" />
-    <Compile Include="TypeWrapper.cs" />
     <Compile Include="XunitTestElementBase.cs" />
     <Compile Include="XUnitMetadataExplorer.cs" />
     <Compile Include="XUnitTestMetadataExplorer.cs" />
